--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap');
 
-:root{
+.root{
   --orange:#ff7a00;
+  --color-base2:#022a30;
+background-color: #140b2c;
 }
 
 *{
@@ -19,13 +21,14 @@ html{
 
 body{
   overflow-x: hidden;
+  
 }
 
 .heading{
   font-size: 4rem;
   text-align: center;
   letter-spacing: 1.7rem;
-  color:#444;
+  color:#fff;
   margin:2rem 0;
   padding-top: 6rem;
   text-decoration: underline;
@@ -39,20 +42,23 @@ body{
   align-items: center;
   justify-content: space-between;
   width:100%;
-  background:#fff;
+  background:#140b2c;
   z-index: 100;
   padding:1rem 2rem;
   box-shadow: 0 .2rem .5rem rgba(0,0,0,.3);
 }
 
 .header .logo img{
+  margin-left: 50px;
   height: 4rem;
 }
 
 
 .header .logo .CompName{
   font-size: 2rem;
-  color: black;
+  color:#fff;
+  margin-left: 15px;
+  vertical-align: middle;
 }
 
 .header nav ul{
@@ -69,7 +75,7 @@ body{
 
 .header nav ul li a{
   font-size: 2rem;
-  color:#666;
+  color:#fff;
 }
 
 .header nav ul li a:hover{
@@ -152,7 +158,7 @@ body{
 
 .home .counting .box .count{
   font-size: 7rem;
-  color:#444;
+  color:#fff;
 }
 
 .home .counting .box h3{
@@ -187,7 +193,7 @@ body{
 
 .about .info p{
   font-size: 1.4rem;
-  color:#444;
+  color:#fff;
   margin:2rem 0;
 }
 
@@ -225,6 +231,8 @@ body{
   box-shadow: 0 .2rem .5rem rgba(0,0,0,.3);
   border-left: .5rem solid var(--orange);
   border-right: .5rem solid var(--orange);
+  border-top: .5rem solid var(--orange);
+  border-bottom: .5rem solid var(--orange);
   border-radius: .5rem;
   text-align: center;
   padding-top: 6rem;
@@ -244,14 +252,14 @@ body{
 }
 
 .service .box-container .box p{
-  color:#333;
+  color:#fff;
   font-size: 1.2rem;
   margin:2rem 0;
 }
 
 .project{
   min-height:100vh;
-  background:#333;
+  background:#140b2c;
 }
 
 .project .heading{
@@ -303,6 +311,10 @@ body{
   border-radius: .5rem;
   text-align: center;
   padding-top: 4rem;
+  border-left: .5rem solid var(--orange);
+  border-right: .5rem solid var(--orange);
+  border-top: .5rem solid var(--orange);
+  border-bottom: .5rem solid var(--orange);
 }
 
 .contact-box-container .contact-box i{
@@ -312,7 +324,7 @@ body{
 
 .contact-box-container .contact-box h3{
   font-size: 1.8rem;
-  color:#444;
+  color:#fff;
   margin:2rem 0;
 }
 
@@ -332,7 +344,7 @@ body{
   box-shadow: 0 .3rem .5rem rgba(0,0,0,.2);
   border:none;
   outline: none;
-  color:#333;
+  color:#fff;
 }
 
 .contact .form-container form .inputBox{
@@ -368,7 +380,7 @@ body{
 }
 
 .footer{
-  background:#333;
+  background:#140b2c;
   text-align: left;
 }
 
@@ -537,13 +549,14 @@ body{
     font-size: 2.5rem;
     width: 30rem;
   }
-  .header .logo .CompName{
-    display: none;
-  }
 
   .header .contact-info{
     display: none;
   }
+  .header nav ul li a{
+    color: #000;
+  }
+
 }
 
 
